<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_bridge</name>
  <version>2.0.0</version>
  <description>
    Bridges MoveIt FollowJointTrajectory actions to Float32MultiArray servo
    commands. Acts as an action server for arm_controller (joint_1..joint_5)
    and hand_controller (joint_6); executes trajectories by publishing joint
    angles (rad→deg) to /servo_angles, which the arm ESP32 firmware subscribes
    to via PCA9685. Open-loop — servos have no encoder feedback, so the FJT
    `actual` field echoes `desired` and `error` is left empty.
  </description>

  <maintainer email="you@example.com">Li Quanyan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>